syntax = "proto3";

// package
option go_package = "github.com/pitipon/shop-microservices";


// structure
message IsAvailableToSellReq {
    string playerId = 1;
    string itemId = 2;
}

message IsAvailableToSellRes {
    bool isAvailable = 1;
}

// Methods
service InventoryGrpcService {
    rpc IsAvailableToSell(IsAvailableToSellReq) returns (IsAvailableToSellRes);
}

